--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,9 @@ License: `use_mit_license()`
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Imports: 
+    shiny,
+    htmltools
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
