--- a/.github/action.yaml
+++ b/.github/action.yaml
@@ -1,5 +1,4 @@
 name: check-r-package
-
 on:
   push:
     branches: [ "master" ]
@@ -7,17 +6,17 @@ on:
     branches: [ "master" ]
     
 jobs:
-  build:
+  r-package-check:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - uses: r-lib/actions/setup-r@v2
-    - uses: r-lib/actions/setup-r-dependencies@v2
-      with:
-        extra-packages: any::rcmdcheck
-        needs: check
-    - uses: r-lib/actions/check-r-package@v2
-      with:
-        rcmdcheck_args: --no-manual
-        needs: install
+      - uses: actions/checkout@v4
+      - uses: r-lib/actions/setup-r@v2
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: any::rcmdcheck
+          needs: check
+      - uses: r-lib/actions/check-r-package@v2
+        with:
+          rcmdcheck_args: --no-manual
+          needs: install
