add styler on workflow dispatch to test gha

--- a/.github/workflows/style.yaml
+++ b/.github/workflows/style.yaml
@@ -3,6 +3,7 @@
 on:
   push:
     paths: ["**.[rR]", "**.[qrR]md", "**.[rR]markdown", "**.[rR]nw", "**.[rR]profile"]
+  workflow_dispatch:
 
 name: Style
 
