--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ RoxygenNote: 7.2.3
 Imports: 
     shiny,
     htmltools,
-    jsonlite
+    jsonlite,
+    bsutils
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
