--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,8 @@ Imports:
     htmltools,
     jsonlite,
     bsutils
+Remotes: 
+    github::the-y-company/bsutils
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
