attempt to end action with pass

--- a/.github/workflows/style.yaml
+++ b/.github/workflows/style.yaml
@@ -69,6 +69,8 @@ jobs:
             git commit ${FILES_TO_COMMIT[*]} -m "Style code (GHA)"
             git pull --ff-only
             git push origin
+            exit 0
           else
             echo "No changes to commit."
+            exit 0
           fi
